[project]
name = "show-attend-tell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[vision]>=4.0.0",
    "marimo>=0.15.2",
    "matplotlib>=3.10.6",
    "pycocoevalcap>=1.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.12.10",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.2",
]
